Initial page set-up

--- a/layouts/partials/homepage.html
+++ b/layouts/partials/homepage.html
@@ -1,7 +1,21 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>Hello World</h1>
+<main>
+    <section id="hero" class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-8 d-flex justify-content-center flex-column">
+                    <div class="hero_heading">
+                        <h1 class="hero_text">
+                            <span class="align-left">Time Has</span><br>
+                            <span class="align-right">Told Me</span>
+                        </h1>
+                        <h2>The Life & Music of Nick Drake</h2>
+                    </div>
+                  
+                    <div class="hero_subHeading flexCol">
+                        <div class="hero_subHeading_thinLine"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    </section>
+</main>
