--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 {{ partial "head.html" . }}
 
 <body>
-     {{ partial "header" (dict "Kind" .Kind "Template" "List") }}
+     <!-- {{ partial "header" }} -->
      {{ block "main" . -}}{{- end }}
      {{ partial "footer" . }}
      {{ partial "scripts" . }}
