--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,381 +1,245 @@
 @font-face {
-  font-family: 'PX-Grotesk';
-  src: url("/") format("woff2"), url("/") format("woff"), url("/") format("truetype");
-  font-weight: 400;
+  font-family: 'Bon Vivant Family Serif';
+  src: url("../../fonts/bon-viviant/BonVivantSerif.eot");
+  src: local("Bon Vivant Family Serif"), local("BonVivantSerif"), url("../../fonts/bon-viviant/BonViviantSerif.eot#iefix") format("embedded-opentype"), url("../../fonts/bon-viviant/BonVivantSerif.woff2") format("woff2"), url("../../fonts/bon-viviant/BonVivantSerif.woff") format("woff"), url("../../fonts/bon-viviant/BonVivantSerif.ttf") format("truetype");
+  font-weight: normal;
   font-style: normal;
 }
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+@font-face {
+  font-family: 'Bon Vivant Family Serif';
+  src: url("../../fonts/bon-viviant/BonVivantSerifBold.eot");
+  src: local("Bon Vivant Family Serif Bold"), local("BonVivantSerifBold"), url("../../fonts/bon-viviant/BonVivantSerifBold.eot?#iefix") format("embedded-opentype"), url("../../fonts/bon-viviant/BonVivantSerifBold.woff2") format("woff2"), url("../../fonts/bon-viviant/BonVivantSerifBold.woff") format("woff"), url("../../fonts/bon-viviant/BonVivantSerifBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
 }
 
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0;
+@font-face {
+  font-family: 'Bon Vivant Family Script';
+  src: url("../../fonts/bon-viviant/BonVivant-Regular.eot");
+  src: local("Bon Vivant Family Script"), local("BonVivant-Regular"), url("../../fonts/bon-viviant/BonVivant-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/bon-viviant/BonVivant-Regular.woff2") format("woff2"), url("../../fonts/bon-viviant/BonVivant-Regular.woff") format("woff"), url("../../fonts/bon-viviant/BonVivant-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
 }
 
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
+@font-face {
+  font-family: 'ITC Clearface';
+  src: url("../../fonts/itc-clearface/ClearfaceStd-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
+@font-face {
+  font-family: 'ITC Clearface';
+  src: url("../../fonts/itc-clearface/ClearfaceStd-Heavy.otf") format("opentype");
   font-weight: bolder;
+  font-style: normal;
 }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
 code,
+del,
+dfn,
+em,
+img,
+ins,
 kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
+q,
+s,
+samp,
+small,
+strike,
+strong,
 sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
-  /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
   padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
+  border: 0;
+  font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
 }
 
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
+body {
+  line-height: 1;
 }
 
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
+ol,
+ul {
+  list-style: none;
 }
 
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
+blockquote,
+q {
+  quotes: none;
 }
 
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 
-/* Define the mixin */
-:root {
-  --color-mode: light;
-  --h1-color: #343a40;
-  --font-color: #495057;
-  --heading-color: #343a40;
-  --background: white;
-  --dark-font-color: #1b1d25;
-  --medium-font-color: #60656c;
-  --light-font-color: #858b93;
-  --light-background: #f1f4f8;
-  --light-background-hover: #e1e6ed;
-  --border: #d6d9de;
-  --link-color: #5183f5;
-  --link-color-darker: #364fc7;
-  --navbar-color: #1b1d25;
-  --blockquote: #f9f9f9;
-  --blockquote-left: #e3e6eb;
-  --transparent-text: rgba(0, 0, 0, 0.7);
-  --transparent-bg: rgba(0, 0, 0, 0.05);
-  --light-transparent-bg: rgba(255, 255, 255, 0.1);
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Scaffolding */
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 1.75;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body {
+  background: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+}
+
+section.hero {
+  background-image: url(/images/hero/nick-drake-hero.jpg);
+  background-color: #07260B;
+  background-position: top right;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  height: 150vh;
+}
+
+section .hero_heading h1 {
+  font-family: 'Bon Vivant Family Serif', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  text-transform: uppercase;
+  font-size: 7rem;
+  line-height: 70%;
+  color: #FFF4ED;
+}
+
+section .hero_heading h1 .align-left {
+  text-align: left;
+  padding-right: 4rem;
+}
+
+section .hero_heading h1 .align-right {
+  text-align: right;
+  padding-left: 4rem;
+}
+
+section .hero_heading h2 {
+  font-family: 'Bon Vivant Family Script', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: normal;
+  font-style: italic;
+  color: #B28A3D;
+  font-size: 40px;
+  line-height: 170%;
+  font-weight: 400;
+  font-style: italic;
 }
 
 @-webkit-keyframes myName {
